--- a/requirements.txt
+++ b/requirements.txt
@@ -131,6 +131,7 @@ ruff==0.14.14
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.17.0
+seaborn==0.13.2
 Send2Trash==2.1.0
 sentry-sdk==2.50.0
 setuptools==80.10.2
